--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,10 @@
     <artifactId>bootstrap</artifactId>
     <version>5.0.0-beta1</version>
 </dependency>
-
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
 <dependency>
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap-datepicker</artifactId>
