--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/piktodb
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/piktodb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 server.port=8888
+spring.jmx.enabled=true
