login with google and facebook

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=
 server.port=8888
 spring.jmx.enabled=true
+spring.security.oauth2.client.registration.facebook.client-id=127583175889036
+spring.security.oauth2.client.registration.facebook.client-secret=f9713fd799c4b173b599f217a7d94616
+spring.security.oauth2.client.registration.facebook.scope=public_profile
+spring.security.oauth2.client.registration.google.client-id=158247261810-t11nsfb55ns3l49i8hu62bunvesnc70l.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=3BZcemiGScHMau1u5oZh4jJL
