--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,16 @@ spring.datasource.username=root
 spring.datasource.password=
 server.port=8888
 spring.jmx.enabled=true
+spring.mustache.expose-request-attributes=true
 spring.security.oauth2.client.registration.facebook.client-id=127583175889036
 spring.security.oauth2.client.registration.facebook.client-secret=f9713fd799c4b173b599f217a7d94616
-spring.security.oauth2.client.registration.facebook.scope=public_profile
+spring.security.oauth2.client.registration.facebook.redirect-uri=http://localhost:8888/login/oauth2/code/facebook
+spring.security.oauth2.client.registration.facebook.scope=public_profile,email
 spring.security.oauth2.client.registration.google.client-id=158247261810-t11nsfb55ns3l49i8hu62bunvesnc70l.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=3BZcemiGScHMau1u5oZh4jJL
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8888/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=email,profile
+spring.security.oauth2.client.registration.github.client-id=a40a71fbd3620423bcfe
+spring.security.oauth2.client.registration.github.client-secret=13c43527dbe33d39f532314f748edee110500946
+spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8888/login/oauth2/code/github
+spring.security.oauth2.client.registration.github.scope=email
